infra/k8s/environments/gcp/production/portal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bos-gateway
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "bos-gateway-portal-euw3"
    networking.gke.io/managed-certificates: "bos-gateway-portal"
    networking.gke.io/v1beta1.FrontendConfig: "bos-gateway-portal"
spec:
  rules:
    - host: portal.calimero.network
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /*
            backend:
              service:
                name: bos-gateway-portal
                port:
                  number: 3000
